added some junk

--- a/mcmc_bsmbh.ipynb
+++ b/mcmc_bsmbh.ipynb
@@ -20,7 +20,8 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import norm\n",
     "import math\n",
-    "from astropy.io import fits"
+    "from astropy.io import fits\n",
+    "##dfafasdfafa"
    ]
   },
   {
@@ -510,9 +511,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R 4.4",
-   "language": "R",
-   "name": "r_4.4"
+   "display_name": "Python 3.11 (ipykernel)",
+   "language": "python",
+   "name": "3.11"
   },
   "language_info": {
    "codemirror_mode": "r",
