--- a/V_Offset.ipynb
+++ b/V_Offset.ipynb
@@ -162,9 +162,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ASTRO-PY3 (Python 3.8)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "astro-py3.8"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -176,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
