added some modelling + emcee"

--- a/V_Offset.ipynb
+++ b/V_Offset.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c02f9111-fc72-4a22-9212-8fce6fa087ce",
    "metadata": {
     "tags": []
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "28eed345-553a-4eed-95d0-a8504584a33b",
    "metadata": {
     "tags": []
@@ -82,7 +82,7 @@
        "688.545687159228"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0f372c6c-e8e7-4f39-8b17-52edd8d5558f",
    "metadata": {
     "tags": []
@@ -106,7 +106,7 @@
        "144.67618434566512"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "001cf707-1225-41ce-a99f-f29616c58746",
    "metadata": {
     "tags": []
@@ -130,7 +130,7 @@
        "-1187.4653317495377"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,22 +142,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "fc486f47-4389-42bf-a3c3-24e755a03b08",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (517943864.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    v_off=\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v_off=abs(SS-NS)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e484ec53",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1876.0110189087657"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v_off"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d5976ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
