--- a/Lum_and_BT_calcs.ipynb
+++ b/Lum_and_BT_calcs.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "523a2362-4f2e-455d-ae85-25144d1413c5",
    "metadata": {},
    "outputs": [],
@@ -28,13 +28,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1806092e-95b8-4d64-a11b-e5875d7808e1",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def lum(a, z, d,s):\n",
-    "    numer= 4*math.pi*d**2\n",
+    "    numer= (4*math.pi*d**2)\n",
     "    denom=(1+z)**(1+a)\n",
     "    l=(numer/denom)*s\n",
     "    return l"
@@ -43,7 +49,13 @@
   {
    "cell_type": "markdown",
    "id": "32b725f4-bd04-4fab-b3f4-11d7bfcf3f72",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "## North source"
    ]
@@ -60,12 +72,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "d165abda-b98b-4baa-8ba5-fc1e467536d1",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.7757084439850153e+48"
+       "1.7757084439850154e+24"
       ]
      },
      "execution_count": 3,
@@ -74,14 +92,20 @@
     }
    ],
    "source": [
-    "vlbi_ns= lum(-0.7, 1.6095,3.75039424588e+25 ,133.96e-6) #d is in m, s is in Jy\n",
+    "vlbi_ns= lum(-0.7, 1.6095,3.75039424588e+26 ,(133.96e-6)*1e-26) #d is in m, s is in Jy\n",
     "vlbi_ns"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "98bb493e-6f78-439f-a1e9-9396a9f95a1f",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "### eMERLIN "
    ]
@@ -90,12 +114,18 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "35bedf82-1a87-4cb7-826f-2b8a448ec804",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0432088275725643e+48"
+       "1.0432088275725642e+24"
       ]
      },
      "execution_count": 4,
@@ -104,7 +134,7 @@
     }
    ],
    "source": [
-    "eme_ns= lum(-0.7, 1.6095, 3.75039424588e+25, 78.7e-6)\n",
+    "eme_ns= lum(-0.7, 1.6095, 3.75039424588e+26, (78.7e-6)*1e-26)\n",
     "eme_ns"
    ]
   },
@@ -128,12 +158,18 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "e02d9f23-dda8-46ca-8586-dbb7fc65c740",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5.2756939437596e+49"
+       "5.2756939437596e+23"
       ]
      },
      "execution_count": 5,
@@ -142,7 +178,7 @@
     }
    ],
    "source": [
-    "vlbi_ss= lum(-0.7, 1.6095, 3.75039424588e+25, 39.8e-6)\n",
+    "vlbi_ss= lum(-0.7, 1.6095, 3.75039424588e+26, (39.8e-6)*1e-26)\n",
     "vlbi_ss"
    ]
   },
@@ -155,15 +191,61 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "264f0ce3-b5af-45a3-b602-4c7132917a93",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ef502ee-faee-4928-860c-2338f3b93770",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "767ece59-29fb-4226-af49-788fe1d360e3",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "6ce2e61b-42a1-4b07-84b2-cc77c38cf84c",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.1055097359536448e+48"
+       "1.1055097359536447e+24"
       ]
      },
      "execution_count": 6,
@@ -172,7 +254,7 @@
     }
    ],
    "source": [
-    "eme_ss=lum(-0.7, 1.6095,3.75039424588e+25, 83.4e-6)\n",
+    "eme_ss=lum(-0.7, 1.6095,3.75039424588e+26, (83.4e-6)*1e-26)\n",
     "eme_ss"
    ]
   },
@@ -223,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "56205a30-40cc-4828-bf02-00384e4b64b6",
    "metadata": {},
    "outputs": [],
@@ -251,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "546f22df-d985-4d2f-9673-84c05710da95",
    "metadata": {},
    "outputs": [
@@ -261,7 +343,7 @@
        "2785675.1817996474"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "04722f9f-80e5-4ee6-ad20-d08933d082a5",
    "metadata": {},
    "outputs": [
@@ -283,7 +365,7 @@
        "4831.908121327799"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "f15ba5d1-c535-4df2-a10d-a2323fcb62d5",
    "metadata": {},
    "outputs": [
@@ -321,7 +403,7 @@
        "167085.31950851978"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "8801df19-ba09-42cc-9ee2-6c3c3c01b8fa",
    "metadata": {},
    "outputs": [
@@ -351,7 +433,7 @@
        "6102.051340778557"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
