added astropy unit conversions

--- a/bsmbhs_new_VLBI_surveys.ipynb
+++ b/bsmbhs_new_VLBI_surveys.ipynb
@@ -414,8 +414,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "2ecb029c-2988-416a-97ac-9f3440ec2c8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "from scipy.special import bdtri, ndtr, pdtri\n",
+    "from sys import exit\n",
+    "\n",
+    "def poissonLimits(k, cl=None, sigma=False):\n",
+    "    \"\"\"\n",
+    " NAME:\n",
+    "       poissonLimits\n",
+    " AUTHOR:\n",
+    "       Tim Haines, thaines.astro@gmail.com\n",
+    " PURPOSE:\n",
+    "       This function computes the single-sided upper and lower\n",
+    "       confidence limits for the Poisson distribution.\n",
+    " CATEGORY:\n",
+    "       Statistics and probability\n",
+    " CALLING SEQUENCE:\n",
+    "       (u,l) = poissonLimits(k, [cl [, sigma]])\n",
+    " INPUTS:\n",
+    "       k:      A strictly nonnegative integer that specifies the\n",
+    "               number of observed events. Can be a list or numpy array.\n",
+    "        \n",
+    " OPTIONAL INPUTS:\n",
+    "       cl:     The confidence level in the interval [0, 1). The default\n",
+    "               is 0.8413 (i.e., 1 sigma)\n",
+    " OPTIONS:\n",
+    "       sigma:  If this is true, then cl is assumed to be a\n",
+    "               multiple of sigma, and the actual confidence level\n",
+    "               is computed from the standard normal distribution with\n",
+    "               parameter cl.\n",
+    " RETURNS:\n",
+    "        Two lists: the first containing the upper limits, and the second\n",
+    "        containing the lower limits. If the input is a numpy array, then\n",
+    "        numpy arrays are returned instead of lists. If the input is a scalar,\n",
+    "        then scalars are returned.\n",
+    " REFERENCES:\n",
+    "       N. Gehrels. Confidence limits for small numbers of events in astrophysical\n",
+    "       data. The Astrophysical Journal, 303:336-346, April 1986.\n",
+    " EXAMPLE:\n",
+    "       Compute the confidence limits of seeing 20 events in 8\n",
+    "       seconds at the 2.5 sigma.\n",
+    "           (u,l) = poissonLimits(20, 2.5, sigma=True)\n",
+    "               u = 34.1875\n",
+    "               l = 10.5711\n",
+    "       However, recall that the Poisson parameter is defined as the\n",
+    "       average rate, so it is necessary to divide these values by\n",
+    "       the time (or space) interval over which they were observed.\n",
+    "       Since these are the confidence limits, the fraction would be\n",
+    "       reported as\n",
+    "           2.5 (+4.273, -1.321) observations per second\n",
+    "\"\"\"\n",
+    "    if cl is None:\n",
+    "        cl = 1.0\n",
+    "        sigma = True\n",
+    "    \n",
+    "    if sigma:\n",
+    "        cl = ndtr(cl)\n",
+    "\n",
+    "    # Since there isn't any syntactical advantage to using\n",
+    "    # numpy, just convert it to a list and carry on.\n",
+    "    isNumpy = False\n",
+    "    if isinstance(k,numpy.ndarray):\n",
+    "        k = k.tolist()\n",
+    "        isNumpy = True\n",
+    "        \n",
+    "    # Box single values into a list\n",
+    "    isScalar = False\n",
+    "    if not isinstance(k,list):\n",
+    "        k = [k]\n",
+    "        isScalar = True\n",
+    "    \n",
+    "    upper = []\n",
+    "    lower = []\n",
+    "    \n",
+    "    for x in k:\n",
+    "        upper.append(pdtri(x,1-cl))\n",
+    "        \n",
+    "        # See Gehrels (1986) for details\n",
+    "        if x == 0:\n",
+    "            lower.append(0.0)\n",
+    "        else:\n",
+    "            lower.append(pdtri(x-1,cl))\n",
+    "    \n",
+    "    if isNumpy:\n",
+    "        upper = numpy.array(upper)\n",
+    "        lower = numpy.array(lower)\n",
+    "    \n",
+    "    # Scalar-in/scalar-out\n",
+    "    if isScalar:\n",
+    "        return (upper[0], lower[0])\n",
+    "    \n",
+    "    return np.array(upper),np.array(lower)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "44d4d5eb-7415-49a8-ab56-73b9cba819e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_areal_density(Nvar,Nepochs,rMAX,rHP,Sdet,Spc,cl):\n",
+    "    if Nvar == 0:\n",
+    "        print('Can only give upper limits, the rest will be nans')\n",
+    "        N_high,N_low = poissonLimits(k=Nvar,cl=cl)\n",
+    "        N_var = np.array([np.nan,N_high,np.nan])\n",
+    "    else:\n",
+    "        N_high,N_low = poissonLimits(k=Nvar,cl=cl)\n",
+    "        N_var = np.array([Nvar,N_high,N_low])\n",
+    "        \n",
+    "    pre = (3.*N_var*np.log(2.))/(2.*np.pi*(rHP**2.))\n",
+    "    fluxes = (Spc/Sdet)**(1.5)\n",
+    "    post = 1./(1 - (np.e**(-3*(rMAX**2)*np.log(2)/(2*(rHP**2)))))\n",
+    "    print(pre,post)\n",
+    "    return pre*fluxes*post,pre*fluxes*post/Nepochs\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "5bfb7999-bbf8-4b94-9fe8-576703147880",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can only give upper limits, the rest will be nans\n",
+      "[       nan 14.8946545        nan] 1.7490963957614207\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([       nan, 26.0521865,        nan]),\n",
+       " array([        nan, 13.02609325,         nan]))"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_areal_density(0,2,0.233,0.258,30.45,30.45,0.95)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df9cf916-f435-40c2-b622-75749b7f4358",
    "metadata": {},
    "outputs": [],
    "source": []
