--- a/BMassPlots.ipynb
+++ b/BMassPlots.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "02915b80-7d7c-44e6-9764-4fa49c24f81c",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
+   "id": "f9a5bbc8-26ed-4423-9fb4-9154ce14c0fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import constants as c\n",
+    "from astropy import constants as ac\n",
+    "from astropy import units as u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "d96f596d-94b0-4972-9b54-684996436d02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "P = 10e2*u.year\n",
+    "stm = 10e8*u.M_sun"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "357638ad-7123-48bf-9b9e-5b633edf2fa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<Quantity 1000. yr>, <Quantity 1.e+09 solMass>)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P, stm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "d6d40cd3-f991-4ada-a0ac-14ab1ee4ecff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(np.float64(1.9884098706980508e+39), np.float64(31557600000.0))"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stm.to(u.kg).value, P.to(u.s).value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "2b072408-a09b-4166-ab1f-83ac258e1fbe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dv = smbh2_model(P.to(u.s).value,stm.to(u.kg).value)*u.m/u.s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "14b692c5-a8c3-4559-aacb-53fb72fa0763",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$2601.39 \\; \\mathrm{\\frac{km}{s}}$"
+      ],
+      "text/plain": [
+       "<Quantity 2601.38997439 km / s>"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dv.to(u.km/u.s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "7aee42ea-30fa-4f55-9846-03734246625e",
    "metadata": {},
    "outputs": [
@@ -63,14 +162,12 @@
     "\n",
     "\n",
     "\n",
-    "def smbh2_model(p, stm):\n",
-    "    \n",
+    "def smbh2_model(p, stm): \n",
     "    sin3=2/3 #estimate\n",
     "    numerator = (stm) * 2 * math.pi * G * sin3\n",
     "    denominator = p\n",
     "    cube_root = (numerator / denominator) ** (1/3)\n",
     "    delta_v = cube_root \n",
-    "\n",
     "    return delta_v\n",
     "\n",
     "# creating parameter ranges\n",
@@ -196,9 +293,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ASTRO-PY3 (Python 3.8)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "astro-py3.8"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -210,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
