--- a/bsmbhs_new_VLBI_surveys.ipynb
+++ b/bsmbhs_new_VLBI_surveys.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fbca8831",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8091699a",
    "metadata": {
     "scrolled": true
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7294dfdf",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "107c08a3",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "cccc0fd5",
    "metadata": {},
    "outputs": [],
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "419395ff",
    "metadata": {},
    "outputs": [],
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "7e592f53",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
      "text": [
       "<>:6: SyntaxWarning: invalid escape sequence '\\#'\n",
       "<>:6: SyntaxWarning: invalid escape sequence '\\#'\n",
-      "/var/folders/95/2mdwxkv53dg0z1fx0__lvyxw0000gq/T/ipykernel_9270/3517064889.py:6: SyntaxWarning: invalid escape sequence '\\#'\n",
+      "/var/folders/95/2mdwxkv53dg0z1fx0__lvyxw0000gq/T/ipykernel_18037/3517064889.py:6: SyntaxWarning: invalid escape sequence '\\#'\n",
       "  ax.set_ylabel('\\# experiments per year')\n"
      ]
     },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "id": "5a23e284-44c3-49c5-a77b-de02b6d5e4c2",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "700a7575-ba24-4f80-919a-efcec9147ad6",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 11,
    "id": "f1fdabbd-eda0-4e2f-8c33-73537ac5da52",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
        "<Quantity 43.34206019 d>"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "id": "ec2e6011-d1ad-4714-a669-73748fc8b17d",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
        "<Quantity 25.09377315 d>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "id": "1ea98acf-847f-480a-ab86-25a8b804870f",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
        "<Quantity 0.57897047>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,12 +351,12 @@
     "\n",
     "Then, we can use the standard radiometer equation to set the model. Sensitivity will scale as the square root of the time on the source\n",
     "\n",
-    "t$$ \\sigma~\\mathrm{[\\mu Jy\\,beam^{-1}]} \\approx 11.86\\left(\\frac{100}{t~\\mathrm{[min]}}\\right)^{1/2}$$"
+    "$$ \\sigma~\\mathrm{[\\mu Jy\\,beam^{-1}]} \\approx 11.86\\left(\\frac{100}{t~\\mathrm{[min]}}\\right)^{1/2}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "id": "fdf3e838-6b51-4dc0-92ae-31e89e41c21d",
    "metadata": {},
    "outputs": [],
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 15,
    "id": "98bbc73b-a5fa-4c3a-af11-0cf09752ae55",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
      "text": [
       "<>:6: SyntaxWarning: invalid escape sequence '\\s'\n",
       "<>:6: SyntaxWarning: invalid escape sequence '\\s'\n",
-      "/var/folders/95/2mdwxkv53dg0z1fx0__lvyxw0000gq/T/ipykernel_9270/109952933.py:6: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "/var/folders/95/2mdwxkv53dg0z1fx0__lvyxw0000gq/T/ipykernel_18037/109952933.py:6: SyntaxWarning: invalid escape sequence '\\s'\n",
       "  ax.set_xlabel('Estimated $1\\sigma$ sensitivity ($\\mathrm{\\mu Jy\\,beam^{-1}})$')\n"
      ]
     },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 16,
    "id": "2ecb029c-2988-416a-97ac-9f3440ec2c8a",
    "metadata": {},
    "outputs": [],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "id": "44d4d5eb-7415-49a8-ab56-73b9cba819e6",
    "metadata": {},
    "outputs": [],
@@ -531,38 +531,29 @@
     "    pre = (3.*N_var*np.log(2.))/(2.*np.pi*(rHP**2.))\n",
     "    fluxes = (Spc/Sdet)**(1.5)\n",
     "    post = 1./(1 - (np.e**(-3*(rMAX**2)*np.log(2)/(2*(rHP**2)))))\n",
-    "    print(pre,post)\n",
     "    return pre*fluxes*post,pre*fluxes*post/Nepochs\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 21,
    "id": "5bfb7999-bbf8-4b94-9fe8-576703147880",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Can only give upper limits, the rest will be nans\n",
-      "[       nan 14.8946545        nan] 1.7490963957614207\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(array([       nan, 26.0521865,        nan]),\n",
-       " array([        nan, 13.02609325,         nan]))"
+       "(array([ 8.6964335 , 41.25470232,  0.44606872]),\n",
+       " array([ 8.6964335 , 41.25470232,  0.44606872]))"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calculate_areal_density(0,2,0.233,0.258,30.45,30.45,0.95)"
+    "calculate_areal_density(1,1,0.233,0.258,30.45,30.45,0.95)"
    ]
   },
   {
@@ -590,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
