--- a/plot_images.ipynb
+++ b/plot_images.ipynb
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "f9fd660f-f475-482c-9cd7-cccd0b1fe6a5",
    "metadata": {},
    "outputs": [
@@ -510,25 +510,15 @@
       "<>:20: SyntaxWarning: invalid escape sequence '\\,'\n",
       "<>:22: SyntaxWarning: invalid escape sequence '\\,'\n",
       "<>:36: SyntaxWarning: invalid escape sequence '\\,'\n",
-      "/var/folders/95/2mdwxkv53dg0z1fx0__lvyxw0000gq/T/ipykernel_35568/2015021938.py:18: SyntaxWarning: invalid escape sequence '\\h'\n",
+      "/var/folders/95/2mdwxkv53dg0z1fx0__lvyxw0000gq/T/ipykernel_35568/617748812.py:18: SyntaxWarning: invalid escape sequence '\\h'\n",
       "  add_scalebar(ax, 0.5*u.arcsec, label=\"0\\hbox{$.\\!\\!^{\\prime\\prime}$5\", color=\"white\")\n",
-      "/var/folders/95/2mdwxkv53dg0z1fx0__lvyxw0000gq/T/ipykernel_35568/2015021938.py:20: SyntaxWarning: invalid escape sequence '\\,'\n",
+      "/var/folders/95/2mdwxkv53dg0z1fx0__lvyxw0000gq/T/ipykernel_35568/617748812.py:20: SyntaxWarning: invalid escape sequence '\\,'\n",
       "  label = '%s / $%.2f\\,\\mathrm{\\mu m}$'%(p_keys[i],np.round(photplam[p_keys[i]]/1e4,2))\n",
-      "/var/folders/95/2mdwxkv53dg0z1fx0__lvyxw0000gq/T/ipykernel_35568/2015021938.py:22: SyntaxWarning: invalid escape sequence '\\,'\n",
+      "/var/folders/95/2mdwxkv53dg0z1fx0__lvyxw0000gq/T/ipykernel_35568/617748812.py:22: SyntaxWarning: invalid escape sequence '\\,'\n",
       "  label = '%s / $%d\\,\\mathrm{nm}$'%(p_keys[i],np.round(photplam[p_keys[i]]/10,0))\n",
-      "/var/folders/95/2mdwxkv53dg0z1fx0__lvyxw0000gq/T/ipykernel_35568/2015021938.py:36: SyntaxWarning: invalid escape sequence '\\,'\n",
+      "/var/folders/95/2mdwxkv53dg0z1fx0__lvyxw0000gq/T/ipykernel_35568/617748812.py:36: SyntaxWarning: invalid escape sequence '\\,'\n",
       "  fig.text(0.5,0.95,'Flux ($e^-\\,\\mathrm{s^{-1}}$)',ha='center',va='top')\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Text(0.5, 0.95, 'Flux ($e^-\\\\,\\\\mathrm{s^{-1}}$)')"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -579,34 +569,15 @@
     "    \n",
     "    cb = plt.colorbar(mappable=im,cax=cax,location='top')\n",
     "\n",
-    "fig.text(0.5,0.95,'Flux ($e^-\\,\\mathrm{s^{-1}}$)',ha='center',va='top')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "9c8d90d5-4c72-415d-8bec-85510997fb3a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['F435W', 'F606W', 'F775W', 'F850LP', 'F125W', 'F140W', 'F160W']"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "list(photplam.keys())"
+    "fig.text(0.5,0.95,'Flux ($e^-\\,\\mathrm{s^{-1}}$)',ha='center',va='top')\n",
+    "fig.savefig('HST_allbands.pdf',dpi=150)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10843339-9be1-4e3f-9b13-de724a6976bf",
+   "id": "3ff90e37-23d5-45b2-8d02-a38245c4416d",
    "metadata": {},
    "outputs": [],
    "source": []
