--- a/counts/number_counts.ipynb
+++ b/counts/number_counts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "d0993886",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "id": "d53f82f1",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "id": "6acdc9e8",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
        "5 -2.486782  15.12  12.50  34.77"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "1fe702cd",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "id": "4e408aaf",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "<Quantity 0.45530094 1 / deg2>"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
+   "id": "318053ae",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "bedb1f4a",
    "metadata": {},
    "outputs": [],
@@ -203,6 +211,35 @@
     "diff_n = np.array(diff_n)\n",
     "f_c = np.array(f_c)\n",
     "diff_n_err = n_err*(f_c**1.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1a6ce5aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 150.2 1083.1 2016. ]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 616.65, 1549.55])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(b_edge*1e6)\n",
+    "f_c*1e6"
    ]
   },
   {
